# lingua

./: .flake8  .gitignore  .travis.yml  LICENSE  README.rst  changes.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
docs/examples/: i18n.sh
src/lingua/: __init__.py  extract.py  polint.py
src/lingua/extractors/: __init__.py  babel.py  compat.py  python.py  xml.py  zcml.py
tests/: test_extract.py
tests/extractors/: test_init.py  test_python.py  test_xml.py  test_zcml.py
